fixed scroll issue on mobile for body and imgView

--- a/src/app.scss
+++ b/src/app.scss
@@ -25,26 +25,29 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden;
-    -webkit-overflow-scrolling: touch;
+    //overflow: hidden;
+    //-webkit-overflow-scrolling: touch;
     background-color: #717171;
 }
 
-// body {
-//     -webkit-overflow-scrolling: touch;
-// }
+#app {
+    &.no-scroll-content {
+        height: 100vh;   
+        width: 100vw;
+        overflow-y: scroll;
+        padding-right: 15px;
+        padding-bottom: 15px;
+        //-webkit-overflow-scrolling: touch;   
+    }
 
-#no-scroll-content {
-    height: 100vh;   
-    width: 100vw;
-    overflow-y: scroll;
-    padding-right: 15px;
-    padding-bottom: 15px;
-    //-webkit-overflow-scrolling: touch;  
     &.scroll-lock {
-        overflow: hidden;
-    }  
- }
+        // height: 100vh;
+        // width: 100vw;
+        //overflow: hidden !important;
+        overflow: hidden !important;
+        -webkit-overflow-scrolling: none!important;
+    } 
+}
 
 
 $light-grey: #717171;
@@ -168,4 +171,8 @@ $logo-size-lg: 200px;
         width: 200px - 20px;
         top: .84 * ($logo-size-lg / 20); left: ($logo-size-lg / 20);
     }
+}
+
+#backdrop {
+    -webkit-overflow-scrolling: touch;
 }
